# groq-telegram-analyzer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  check_errors.txt  check_output.txt  docker-compose.yml  errors.txt  errors_ascii.txt
scripts/: deploy.sh
src/: ai.rs  bot.rs  extractor.rs  lib.rs  main.rs  markdown.rs
src/extractor/: image.rs  mod.rs  pdf.rs
